# benchmark-workspace

./: .env.example  .gitignore  AGENTS.md  AGENT_DEBUGGING_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  DEBUG.md  GLM-AND-CEREBRAS-WIRING.md  HANDOFF.md  HARDENING.md  IMPLEMENTER-NOTES.md  MIGRATION-HANDOFF.md  MIGRATION-PLAN.md  MIGRATION-TASKS.md  PLAN.md  RECORD-REFINE-MIGRATION.md  REMEDIATION.md  SCIENCE.md  SEC-HOWTO.md  SECURITY-RIG-WRONG-RECORD-BYPASS.md  SPIKES.md  STATUS.md  TESTS.md  banking.threatmodel.txt  camel-alignment-analysis.md  cold-read-B-2026-05-06-codex-phase1.md  cross-domain.threatmodel.txt  extras.threatmodel.txt  futr-action-type-allowlist.md  how-we-defend-advice.md  labels-policies-guards.md  migration-plan.md  mlld-agentdojo-guide.md  mlld-bug-recursive-tool-wrapper-shadowing.md  mlld-config.json  mlld-dev-prompt-c3162-gap2.md  mlld-dev-prompt-c3162.md  mlld-dev-prompt-field-optional.md  mlld-dev-prompt-influenced-rule-followup.md  mlld-dev-prompt-influenced-rule.md  (+34 more)
bench/: ARCHITECTURE.md  INTERFACE.md  README.md  grind-tasks.json  mlld-lock.json  pyproject.toml
bench/agents/: banking.mld  banking.v1.mld  slack.mld  slack.v1.mld  travel.mld  travel.v1.mld  workspace.mld  workspace.v1.mld
bench/docker/: .dockerignore  Dockerfile  Dockerfile.mlld  Dockerfile.opencode  entrypoint.sh
bench/src/: date_shift.py  host.py  mcp_server.py  run.py
bench/tests/: catalog-migration.mld  slack-tools.mld  test_host.py  travel-advice-gate-live.mld  travel-classifiers.mld  travel-tools.mld  workspace-tools.mld
rig/agentdojo-mcp/: README.md  __main__.py  (+6 more)
(+1751 files in other folders)
