[project]
name = "agentdojo-mcp"
version = "0.1.0"
description = "MCP server wrapping AgentDojo tools for mlld/rig agents."
requires-python = ">=3.11"
dependencies = [
    "agentdojo>=0.1.35",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "coerce.py", "format.py", "state.py", "__main__.py"]
